@@ -1,5 +1,7 @@
 2004-11-14  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtkmenu.xml ("tearoff-state") Add description.
+
 	* pygtk-gtklabel.xml (Description): Update.
 	(set_ellipsize, get_ellipsize, set_width_chars, get_width_chars)
 	(get_single_line_mode, set_single_line_mode): Add descriptions.
